Update Post “2017-10-26-daft-punk”

--- a/content/blog/2017-10-26-daft-punk.md
+++ b/content/blog/2017-10-26-daft-punk.md
@@ -1,17 +1,128 @@
 ---
-title: Daft Punk
+title: Glitchbox
 date: 2020-02-05T14:43:00.000Z
-image: /images/daft-punk.jpg
+image: ""
 tags:
   - Music
   - Electronic
-draft: false
+draft: true
 ---
+<!--StartFragment-->
 
-**Daft Punk** is a French [electronic music](https://en.m.wikipedia.org/wiki/Electronic_music) duo formed in Paris in 1993 by [Guy-Manuel de Homem-Christo](https://en.m.wikipedia.org/wiki/Guy-Manuel_de_Homem-Christo) and [Thomas Bangalter](https://en.m.wikipedia.org/wiki/Thomas_Bangalter). They achieved popularity in the late 1990s as part of the [French house](https://en.m.wikipedia.org/wiki/French_house) movement; they also had success in the years following, combining elements of [house music](https://en.m.wikipedia.org/wiki/House_music) with [funk](https://en.m.wikipedia.org/wiki/Funk), [techno](https://en.m.wikipedia.org/wiki/Techno), [disco](https://en.m.wikipedia.org/wiki/Disco), rock and [synthpop](https://en.m.wikipedia.org/wiki/Synthpop). They have worn ornate helmets and gloves to assume [robot](https://en.m.wikipedia.org/wiki/Robot) personas in most public appearances since 1999 and rarely grant interviews or appear on television. The duo were managed from 1996 to 2008 by [Pedro Winter](https://en.m.wikipedia.org/wiki/Pedro_Winter) (also known as Busy P), the head of [Ed Banger Records](https://en.m.wikipedia.org/wiki/Ed_Banger_Records).
-<!-- excerpt -->
-After Bangalter and Homem-Christo's [indie rock](https://en.m.wikipedia.org/wiki/Indie_rock) band [Darlin'](https://en.m.wikipedia.org/wiki/Darlin'_(French_band)) disbanded, they began experimenting with [drum machines](https://en.m.wikipedia.org/wiki/Drum_machine) and synthesisers. Their debut studio album *[Homework](https://en.m.wikipedia.org/wiki/Homework_(Daft_Punk_album))* was released by [Virgin Records](https://en.m.wikipedia.org/wiki/Virgin_Records) in 1997 to positive reviews, backed by singles "[Around the World](https://en.m.wikipedia.org/wiki/Around_the_World_(Daft_Punk_song))" and "[Da Funk](https://en.m.wikipedia.org/wiki/Da_Funk)". Their second album, *[Discovery](https://en.m.wikipedia.org/wiki/Discovery_(Daft_Punk_album)),* had further success, supported by hit singles "[One More Time](https://en.m.wikipedia.org/wiki/One_More_Time_(Daft_Punk_song))", "[Digital Love](https://en.m.wikipedia.org/wiki/Digital_Love_(Daft_Punk_song))" and "[Harder, Better, Faster, Stronger](https://en.m.wikipedia.org/wiki/Harder,_Better,_Faster,_Stronger)". In March 2005, Daft Punk released their third album, *[Human After All](https://en.m.wikipedia.org/wiki/Human_After_All),* to mixed reviews, though the singles "[Robot Rock](https://en.m.wikipedia.org/wiki/Robot_Rock_(song))" and "[Technologic](https://en.m.wikipedia.org/wiki/Technologic)" achieved success in the United Kingdom. Daft Punk [toured throughout 2006 and 2007](https://en.m.wikipedia.org/wiki/Alive_2006/2007) and released the live album *[Alive 2007](https://en.m.wikipedia.org/wiki/Alive_2007)*, which won a [Grammy Award](https://en.m.wikipedia.org/wiki/Grammy_Award) for [Best Electronic/Dance Album](https://en.m.wikipedia.org/wiki/Grammy_Award_for_Best_Electronic/Dance_Album). They composed the score for the film *[Tron: Legacy](https://en.m.wikipedia.org/wiki/Tron:_Legacy)*, which was released in 2010 alongside [its soundtrack album](https://en.m.wikipedia.org/wiki/Tron:_Legacy_(soundtrack)).
+21M.370 final project: 
 
-In 2013, Daft Punk left Virgin for [Columbia Records](https://en.m.wikipedia.org/wiki/Columbia_Records), and released their fourth album, *[Random Access Memories](https://en.m.wikipedia.org/wiki/Random_Access_Memories),* to acclaim; lead single "[Get Lucky](https://en.m.wikipedia.org/wiki/Get_Lucky_(Daft_Punk_song))" reached the top 10 in the charts of 32 countries. *Random Access Memories* won five Grammy Awards in 2014, including [Album of the Year](https://en.m.wikipedia.org/wiki/Grammy_Award_for_Album_of_the_Year) and [Record of the Year](https://en.m.wikipedia.org/wiki/Grammy_Award_for_Record_of_the_Year) for "Get Lucky". In 2016, Daft Punk gained their first number one on the [*Billboard* Hot 100](https://en.m.wikipedia.org/wiki/Billboard_Hot_100) with the song "[Starboy](https://en.m.wikipedia.org/wiki/Starboy_(song))", a collaboration with [The Weeknd](https://en.m.wikipedia.org/wiki/The_Weeknd). As of 2015, Daft Punk had sold over 12 million albums worldwide.
+Glitchbox
 
-> Source: https://en.m.wikipedia.org/wiki/Daft_Punk
+# Demo
+
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/zhbkYABmBxc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+
+# Aesthetic Goals
+
+Coming into the class, I had already looked into the field of Digital Musical Instrument design and had acquired a narrow view of what I valued in a new instrument. I was focused on allowing enough control over pitch generation for it to be able to be played like a conventional instrument, and put a lot of weight on the potential for virtuosity. I also wanted the instrument to be reusable, versatile… In short, I expected it to behave like a traditional instrument. During the course of this class, I was exposed to approaches that deviated from this standard and were successful in doing so, and I wanted my final project to break from these rules too. While preparing the presentation on Myriam Bleau, I realized that giving up real-time control of some aspect of the performance that I considered previously crucial could allow me to give a better performance. This drove me to design an instrument that would manipulate a pre-existing signal rather than synthesize sound from scratch. Since I’ve always been a fan of glitches of all kinds, I decided to try to control glitches gesturally. The instrument acts on pre-recorded samples playing back, and can also glitch live audio input. Of all the works we studied this semester, I believe Myriam Bleau’s work translated best to video, and I took my inspiration from her for the final performance, filming in a dark setting using flashing LEDs.
+
+# Hardware
+
+I wanted to use the accelerometer to allow for gestural control by moving the handheld instrument. Any additional controls had to be easily accessible while moving the device, so I opted for buttons. I recycled the buttons enclosed in cardboard that I used for my group instrument, and secured the ESP32 on the opposing side, with the accelerometer soldered to the board. 
+
+<!---
+![](https://lh4.googleusercontent.com/ZG68SKYgArWAWYp_8yeRYnsmpICe-XWA1Fc3eT6Zt8qu5CmIg7KIBgiV-3vvF8oCTSN3zmF6Fw3wtsS4CX4ajD2CzB7BMKQ1hwzLkRl30VY-MYjZxX_XNM0g6-j8bllJRdSRP-zu)
+-->
+
+<img src="https://lh4.googleusercontent.com/ZG68SKYgArWAWYp_8yeRYnsmpICe-XWA1Fc3eT6Zt8qu5CmIg7KIBgiV-3vvF8oCTSN3zmF6Fw3wtsS4CX4ajD2CzB7BMKQ1hwzLkRl30VY-MYjZxX_XNM0g6-j8bllJRdSRP-zu" height="500" />
+
+The three buttons on the back are easily accessible with my fingers while I hold the devices with both hands, putting my thumbs on the thumb rests shown in the picture above. I sometimes also hold the device with my left hand, using only the left thumb rest. In one hand operation, all buttons but the furthest back button are usable, but it is difficult to press front and back buttons at the same time. The device is connected to the computer using a mini-USB cable for both serial communication and power.
+
+<img src="https://lh6.googleusercontent.com/s6OaeDdonOgn9cEFh1NsfWmguoL2cdTKCJV-aes7JN4g1Uj1dY_M_WrJsrxZHpd1kwazGgsHLO0a7niUZ5e65G0hkkfgXJUR1RK8AMYyDjWAdNnEjH9FuVyPSJWJ6BMFAWhHGOfG" height="300" />
+
+<img src="https://lh5.googleusercontent.com/xPjJR3VDRQ6osuu1NW0JWufL1FzQcwfvCaDOMGGHLzbbtk8sG1R0W_ETMISDcT111VJ2pykT1jZZJUX0tC4-QEw01MnOv7pjEd1yu_25p-wOs3OA3nucG2bN8o5Y3IT8ZI9tPhHO" height="300" />
+
+
+# Software
+
+
+
+<img src="https://lh6.googleusercontent.com/-jMqo2CvNKw7aD1-yMGn6KHFFmAxgEei6S3nCeM8YyhlrzH-iAnnYlyrEFAZXWUcfVlFJyfEiNrStxgXLasbmhYve9OIGynFah0--_MbwkPOVRBScAru_VApRngXlFO8mK8ULnmj" height="600" />
+
+After reading about Wekinator, an application that learns OSC mappings using machine learning, I decided to use it for the final project. The setup process for Wekinator is fairly simple: after choosing the number and types of inputs and outputs, I choose an output value for all relevant parameters and record examples of when I would like it to output those values. For example, if I want the crush output value to be 1 when I tilt the accelerometer to the left, I set crush to 1, tilt the accelerometer, and press “Start Recording”. Repeating the process for all relevant parameters, I had a mapping that was both easy to calibrate and very stable in the neutral position. I fed all of the raw accelerometer inputs to Wekinator, in addition to tilt for all three dimensions. The calculations for tilt were made in pd. As outputs, I had four continuous parameters varying from 0 to 1, which were mapped to the parameters described in the sound processing section, namely bitcrushing, pitchglitch, fftglitch, and playbackrate. I had to lower the rate at which python sends data to PureData to keep it from crashing.
+
+### Wekinator UI:
+
+<img src="https://lh6.googleusercontent.com/R_FgeWyKlZtRk3qmPlyIkGpsRuVsBHFZJzuZYLd3066TYfg71oeNjPRDUWH5EI1yupPE9T3P-ZoPFq83rVyh8gMNLxkXnM7im79EnBmK-lhe7gXq9ziMF-cNRodSw3aSZ6Pf2wnq" height="300" />
+
+Wekinator Inputs:  accelX accelY accelZ tiltX tiltY tiltZ accelMag giroX giroY giroZ
+
+Wekinator Outputs: crush pitchglitch fftglitch playbackrate 
+
+## Formatting Messages to send to Wekinator:
+
+<img src="https://lh4.googleusercontent.com/vowImSTZQgV22JisghND2qJXE7AnmKDKQaCQCPkOPgXOiKCUeRO9YuxHeM3T4kiqJJLwjRqdsgsO5aVuPoHfm3DOVcCdbJX5AGvQt3s_vK3_R8wVlKdUK6Kr2oiaFEhZunabPbox" height="300" />
+
+
+Control Messages Flow:
+
+
+<img src="https://lh3.googleusercontent.com/VKyQjnk2tk0Ex38YWPjX3O4vjENq0jVdCnzKJF9M1m-mCHZHwynuJ11_RNQiDLZzuciuM9ZvzVMCBUhQ1ZMv8ZW5woRwHy2_abLtPdE_j7zxkcsbnT7IHbyZnj1_mvpOIJaiw_TF" height="500" />
+
+# Sound Processing:
+
+<img src="https://lh6.googleusercontent.com/-jMqo2CvNKw7aD1-yMGn6KHFFmAxgEei6S3nCeM8YyhlrzH-iAnnYlyrEFAZXWUcfVlFJyfEiNrStxgXLasbmhYve9OIGynFah0--_MbwkPOVRBScAru_VApRngXlFO8mK8ULnmj" height="500" />
+
+### Sample playback, playback rate manipulation:
+
+I used a phasor\~ object to index into a tabread4\~. This allowed me to have full control on the playback speed and location of the sample. This allowed me to vary the playback rate simply by multiplying the output of the phasor by a constant. 
+
+
+
+### Stutter:
+
+Because of the tabread4\~ approach, I just had to subtract a number to the output of the phasor\~ object to get a stutter effect. The implementation is simply a metronome regularly increasing the indexing offset. The stutter rate can be changed continuously, by adjusting the amount added to the counter and the metronome delay.
+
+
+
+The above modules only acted on the sample being played by the tabread4~. The following modules also act on the live audio input. 
+
+### Bitcrusher:
+
+<img src="https://lh4.googleusercontent.com/4doSHZPZVQlQu2Rya2LsBEtbfVxh-pKF0aO2yp-UqYGi4aq3wNEPLSiGPS0BQpWnBximT7zJDGrEM8SnjKOVs3CH-t_Miti2HLtmcP3AyWJFNI1Gl-4n5NvxgZkM6-9V1_ZgWtgy" height="500" />
+
+I used the bitcrusher module in automatonism, and made a combined parameter which increased the wet mix and decreased the bitrate. This allowed me to get an unmodified sound at 0 and a fully crushed sound at 1.
+
+
+
+### Low-resolution FFT reconstruction:
+
+<img src="https://lh6.googleusercontent.com/fQvQb34Aw6TFBL9kZ7KgjzMm3fffJ9-7iqVrT04lPSPn87oRBOUDqb5wbkDX2TPoPomsk47-WWYk77EyMDW6zy_ZNDVfIU30qlslJaT9lvH7b392ZYf5jPD3U20l1YxXPer88HaX" height="500" />
+
+I decomposed the signal into the 5 loudest partials using the sigmund~ external, and then resynthesized the signal based on these partials, discarding the phase information. This gives a somewhat low-pass filtered sound, and any noise introduces a lot of fast moving notes, making it sound like independent sine wave voices. I can control the dry/wet mix with the original signal.
+
+
+
+### Pitch-shift glitches:
+
+By pitch shifting the sound down and back up again, artefacts are introduced due to mistuning stacking and loss of resolution in lower frequencies, while retaining the original pitch of the signal. I used a modified version of the example pitch-shifting patch, and controlled the pitch shifting amount. This patch introduces a short but noticeable delay, which isn’t a problem when the sound is glitchy but should be avoided for the clean signal. To remedy this, the effect only activates when the pitch shifting is greater than 2 semitones, akin to how true bypass on guitar pedals bypasses the processing when the effect is off.
+
+
+<img src="https://lh3.googleusercontent.com/gcowgD7G37jJWDgzbD_mchk-RHm1NM_nXiTx4_TYaoOoSZy9WLxytioFFaPiW5Y31KXj6I0FiYjh7n5FFdzwDDVnYpVnHWl4sSdDCx_f7PedWlaT7K1xTlYLNCZQ_795CD0QUxZD" height="500" />
+
+# Mapping
+
+The 3 continuous parameters for bitcrushing, fft glitches, and pitch glitches are mapped to tilting towards me, left, and right respectively. These glitches are post-stutter, so any stuttering sample can be glitched while stuttering. Larger gestures and increases in acceleration map to the playback and stutter rates parameters, but these aren’t always active because the effect is quite dramatic. One of the front buttons enables the playback rate to be modified by this parameter. The other activates stutter mode. The buttons on the back shorten the stutter length by factors of 2, 4, and 8, and the stutter rate continuous parameter mentioned above also contributes to changing this length.
+
+
+
+The precise control that the tilting provides contrasts nicely with the chaos that the acceleration based parameters introduce, and the visual aspect of the performance reflect this: using the playback rate controls requires making big, fast gestures, while tilting requires being relatively still. 
+
+# Challenges and Reflection
+
+I was originally using automatonism’s looper module, then abandoned it mostly because it kept making pureData crash, but also because the stutter effect gave me most of what I was trying to get out of the looper. Lowering the data rates was also important in getting the system to be stable.
+
+I am most satisfied with the sound design of this instrument. The glitches sound good and have a smooth progression from a perfectly clean signal to complete chaos. For this reason, and because Wekinator allows for precise calibrating, it also feels nice to play: I really feel in control using the tilt parameters. What I also like is the possibility it has for collaboration. In my final performance, I essentially collaborated with myself by playing the piano alongside the glitchbox, but I could have had someone else playing the piano, or any other instrument. I could imagine it becoming part of a DJ concert for example, to introduce gestural visuals for a climactic moment. However, in its current state, it’s unclear that it could be used as the main instrument for an entire concert without a lot of pre-composition happening. Perhaps allowing for switches between different glitch types or a full-fledged looper could help bring more versatility to the instrument. And the biggest problem right now is the hardware, which is made of cardboard and could be sturdier and better looking. 
+
+I like the idea of integrating the glitchbox with other players and instruments, and I am planning to make a more robust version that I could use in my own concerts. Enhancing one handed control, so I could use this more easily while playing the guitar for example, would also be very nice.
+
+
+
+<!--EndFragment-->
